--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="container-fluid bg-image">
-  <div class="row styler"></div>
-  <div class="row">
+  <div class="row "></div>
+  <div class="row styler">
      <div class="col-md-2"> </div>
      <div class="col-md-8">
 
