--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,13 +1,16 @@
 {% macro displayPosts(post_list) %}
 
     {% for post in post_list %}
-    <div class="container">
+    
       <h2>{{ post.title }}</h2> 
       <p>{{ post.post }}</p>
       <p><em class="diff">{{ post.user.username }}</em></p>
       <p>({{ post.time.strftime('%B-%d-%y, %H:%m') }})</p>
       <a href="{{url_for('main.post', id = post.id)}}" class=" btn btn-primary">Comments</a> 
-    </div>
+    
+      <a href="{{url_for('main.update', id = post.id)}}" class=" btn btn-primary">Update</a>
+      <a href="{{url_for('main.delete', id = post.id)}}" class=" btn btn-danger">Delete</a>
+   
     <hr>
     {% endfor %}
 {% endmacro %}
@@ -18,7 +21,7 @@
    <p>{{ comment.post_comment }}</p>
    <p>
     <strong>Author:</strong>
-    {{ comment.user.username }}
+   <span class="diff"> {{ comment.user.username }}</span>
     </p>
     <hr>
    </div>
