--- a/app/templates/new_comment.html
+++ b/app/templates/new_comment.html
@@ -10,7 +10,7 @@
     <div class="container-fluid bg-image">
        <div class="row">
           <div class="col-md-3"></div>
-          <div class="col-md-6">
+          <div class="col-md-6 styler">
            {{ wtf.quick_form(comment_form) }}
           </div>
           <div class="col-md-3"></div>
